--- a/reality.html
+++ b/reality.html
@@ -11,7 +11,7 @@
 <body>
 <header>
   <div class="bar">
-    <div class="title">良乡赶考</div>
+    <div class="title">霍格沃茨：掠夺纪年</div>
     <!-- 新增登录/注册 -->
     <div class="auth">
       <a href="login.html?from=reality" class="btn small">登录</a>
@@ -25,20 +25,21 @@
   <section id="routes" class="card">
     <h3 style="text-align:center; font-size:24px; margin-bottom:20px;">🎮 游戏主菜单</h3>
     <div class="grid">
-      
+
+      <div class="route" style="text-align:center;">
+        <h4>背景介绍 <span class="tag">进度</span></h4>
+        <div class="muted">查看与管理游戏存档</div>
+        <div class="row" style="margin-top:12px; justify-content:center;">
+          <a href="page1.html" class="btn accent">进入</a>
+        </div>
+      </div>
+
+
       <div class="route" style="text-align:center;">
         <h4>开始游戏 <span class="tag">新旅程</span></h4>
         <div class="muted">进入主线剧情，开启良乡赶考之路</div>
         <div class="row" style="margin-top:12px; justify-content:center;">
-          <a href="game.html" class="btn primary">进入</a>
-        </div>
-      </div>
-
-      <div class="route" style="text-align:center;">
-        <h4>存档 <span class="tag">进度</span></h4>
-        <div class="muted">查看与管理游戏存档</div>
-        <div class="row" style="margin-top:12px; justify-content:center;">
-          <a href="save.html" class="btn accent">进入</a>
+          <a href="www/index.html" class="btn primary">进入</a>
         </div>
       </div>
 
